# SaplingTactics

./: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
assets/: huntDesignExport.json  hunterDesignExport.json  meleeDesignExport.json  turretDesignExport.json  wanderDesignExport.json  wizardDesignExport.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  lib.hpp  main.cpp
source/adapter/: Adapter.h  ArborMasterAdapter.cpp  ArborMasterAdapter.h  Debugger.h  TreeDesignNode.cpp  TreeDesignNode.h
source/lib/: AIManager.cpp  AIManager.h  ArborMasterAdapter.cpp  ArborMasterAdapter.h  BehaviourNodes.h  BehaviourTree.cpp  BehaviourTree.h  EntityManager.cpp  EntityManager.h  GameEngine.cpp  GameEngine.h  Projectile.cpp  Projectile.h  ProjectileEntity.cpp  ProjectileEntity.h  RangedUnit.cpp  RangedUnit.h  TreeDesignNode.cpp  TreeDesignNode.h  Unit.cpp  Unit.h  UnitAction.cpp  UnitAction.h  UnitFactory.cpp  UnitFactory.h
test/: CMakeLists.txt
test/source/: SaplingTactics_test.cpp
